Halaman details selesai yeeayy

--- a/details.html
+++ b/details.html
@@ -31,7 +31,7 @@
           <li class="nav-item ">
             <a href="/index.html" class="nav-link">Home</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a href="/categories.html" class="nav-link">Categories</a> 
           </li>
           <li class="nav-item">
@@ -152,6 +152,46 @@
               </p>
             </div>
             
+          </div>
+        </div>
+      </section>
+
+      <section class="store-riview">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-lg-8 mt-3 mb-3">
+              <h5>Customer Riview (3)</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-lg-8">
+              <ul class="list-unstyled">
+                <li class="media">
+                  <img src="images/icon-testimonial-1.png" alt="" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mb-2 mb-1">Audrey Lolita</h5>
+                    I thought it was not good for living room. I really happy
+                    to decided buy this product last week now feels like homey.
+                  </div>
+                </li>
+                <li class="media">
+                  <img src="images/icon-testimonial-2.png" alt="" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mb-2 mb-1">Reva Elizabeth</h5>
+                     Color is great with minimalist concept. Even I thought it was made by Cactus industry. 
+                     I do really satisfied with this.
+                  </div>
+                </li>
+                <li class="media">
+                  <img src="images/icon-testimonial-3.png" alt="" class="mr-3 rounded-circle">
+                  <div class="media-body">
+                    <h5 class="mb-2 mb-1">Geraldine </h5>
+                    When I saw at first, it was really awesome to have with.
+                    Just let me know if there is another upcoming product like this. 
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
