Active nya ketinggalan dong :v

--- a/dashboard-products-create.html
+++ b/dashboard-products-create.html
@@ -27,13 +27,13 @@
             <a href="dashboard.html" class="list-group-item list-group-item-action">
               Dashboard
             </a>
-            <a href="dashboard-product.html" class="list-group-item list-group-item-action">
+            <a href="dashboard-product.html" class="list-group-item list-group-item-action active">
               My Product
             </a>
             <a href="dashboard-transaction.html" class="list-group-item list-group-item-action">
               Transaction
             </a>
-            <a href="dashboard-settings.html" class="list-group-item list-group-item-action active">
+            <a href="dashboard-settings.html" class="list-group-item list-group-item-action">
               Store Settings
             </a>
             <a href="dashboard-account.html" class="list-group-item list-group-item-action">
