--- a/dashboard-transactions-details.html
+++ b/dashboard-transactions-details.html
@@ -130,7 +130,7 @@
                             </div>
                             <div class="col-12 col-md-6">
                               <div class="product-title">Status</div>
-                              <div class="product-subtitle text-danger">
+                              <div class="product-subtitle text-danger" v-model="status">
                                 Pending
                               </div>
                             </div>
